@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: Em4EventAction.cc,v 1.4 2000-12-07 13:02:11 maire Exp $
+// $Id: Em4EventAction.cc,v 1.5 2001-02-20 16:08:36 maire Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -47,9 +47,19 @@ Em4EventAction::~Em4EventAction()
 void Em4EventAction::BeginOfEventAction( const G4Event* evt)
 {
  G4int evtNb = evt->GetEventID();
+
+ //printing survey
  if (evtNb%printModulo == 0) 
     G4cout << "\n---> Begin of Event: " << evtNb << G4endl;
-    
+  
+ //save rndm status
+ if (Em4Run->GetRndmFreq() == 2)
+   { 
+    HepRandom::saveEngineStatus("beginOfEvent.rndm");   
+    if (evtNb%printModulo == 0) HepRandom::showEngineStatus();
+   }
+  
+ //additional initializations   
  TotalEnergyDeposit = 0.;
 }
 
@@ -75,18 +85,6 @@ void Em4EventAction::EndOfEventAction( const G4Event* evt)
                                trj->DrawTrajectory(50); 
       }
   }
-  
-  //save rndm status
-  if (Em4Run->GetRndmFreq() == 2)
-    { 
-     HepRandom::saveEngineStatus("endOfEvent.rndm");   
-     G4int evtNb = evt->GetEventID();
-     if (evtNb%printModulo == 0)
-       { 
-        G4cout << "\n---> End of Event: " << evtNb << G4endl;
-        HepRandom::showEngineStatus();
-       }
-    }     
 }
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
