@@ -1,4 +1,4 @@
-$Id: History,v 1.6 2000-12-07 13:02:11 maire Exp $
+$Id: History,v 1.7 2001-02-20 16:08:36 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,7 +14,11 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
-     
+
+20-02-01  mma (testem4-V03-00-02)
+          - verbose stepping adapted for STL
+	  - save rndm at begin of event     
+	           
 07-12-00  mma (testem4-V02-00-03 & testem-noHist)
           remove hbook histograms: GNUmakefile,runAction,eventAction
 				   
